version/0.3/_sources/api/ansys/sam/sysml2/meta_model/element/Element.rst.txt






:class:`Element`
================


.. py:class:: ansys.sam.sysml2.meta_model.element.Element(element_id: str)

   Bases: :py:obj:`ansys.sam.sysml2.meta_model.e_object.EObject`


   
   Java class 'com.ansys.medini.metamodel.sysml.Element'.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: Element

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~name`
            - Get the name property.
          * - :py:attr:`~owner`
            - Get the owner property.
          * - :py:attr:`~comment`
            - Get the comment property.
          * - :py:attr:`~short_name`
            - Get the short name property.
          * - :py:attr:`~owned_annotation`
            - Get the owned annotation property.
          * - :py:attr:`~visibility`
            - Get the visibility property.
          * - :py:attr:`~qualified_name`
            - Get the qualified name property.
          * - :py:attr:`~owning_namespace`
            - Get the owning namespace property.
          * - :py:attr:`~owned_element`
            - Get the owned element property.
          * - :py:attr:`~documentation`
            - Get the documentation property.
          * - :py:attr:`~alias_ids`
            - Get the alias ids property.
          * - :py:attr:`~textual_representation`
            - Get the textual representation property.
          * - :py:attr:`~owned_inherited_relationship`
            - Get the owned inherited relationship property.
          * - :py:attr:`~owned_relationship`
            - Get the owned relationship property.







Import detail
-------------

.. code-block:: python

    from ansys.sam.sysml2.meta_model.element import Element

Property detail
---------------

.. py:property:: name
   :type: str


   
   Get the name property.





   :Returns:

       :class:`python:str`
           Value of property name.











   ..
       !! processed by numpydoc !!

.. py:property:: owner
   :type: Element


   
   Get the owner property.





   :Returns:

       "Element"
           Value of property owner.











   ..
       !! processed by numpydoc !!

.. py:property:: comment
   :type: list[Comment]


   
   Get the comment property.





   :Returns:

       :class:`python:list`\["Comment"]
           Value of property comment.











   ..
       !! processed by numpydoc !!

.. py:property:: short_name
   :type: str


   
   Get the short name property.





   :Returns:

       :class:`python:str`
           Value of property short name.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_annotation
   :type: list[Annotation]


   
   Get the owned annotation property.





   :Returns:

       :class:`python:list`\["Annotation"]
           Value of property owned annotation.











   ..
       !! processed by numpydoc !!

.. py:property:: visibility
   :type: VisibilityKind


   
   Get the visibility property.





   :Returns:

       "VisibilityKind"
           Value of property visibility.











   ..
       !! processed by numpydoc !!

.. py:property:: qualified_name
   :type: str


   
   Get the qualified name property.





   :Returns:

       :class:`python:str`
           Value of property qualified name.











   ..
       !! processed by numpydoc !!

.. py:property:: owning_namespace
   :type: Namespace


   
   Get the owning namespace property.





   :Returns:

       "Namespace"
           Value of property owning namespace.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_element
   :type: list[Element]


   
   Get the owned element property.





   :Returns:

       :class:`python:list`\["Element"]
           Value of property owned element.











   ..
       !! processed by numpydoc !!

.. py:property:: documentation
   :type: list[Documentation]


   
   Get the documentation property.





   :Returns:

       :class:`python:list`\["Documentation"]
           Value of property documentation.











   ..
       !! processed by numpydoc !!

.. py:property:: alias_ids
   :type: list[str]


   
   Get the alias ids property.





   :Returns:

       :class:`python:list`\[:class:`python:str`]
           Value of property alias ids.











   ..
       !! processed by numpydoc !!

.. py:property:: textual_representation
   :type: list[TextualRepresentation]


   
   Get the textual representation property.





   :Returns:

       :class:`python:list`\["TextualRepresentation"]
           Value of property textual representation.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_inherited_relationship
   :type: list[Relationship]


   
   Get the owned inherited relationship property.





   :Returns:

       :class:`python:list`\["Relationship"]
           Value of property owned inherited relationship.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_relationship
   :type: list[Relationship]


   
   Get the owned relationship property.





   :Returns:

       :class:`python:list`\["Relationship"]
           Value of property owned relationship.











   ..
       !! processed by numpydoc !!






